# packages/api-contracts/contract-ts/src/models/PrivacyRequestList.ts
@@ -1,0 +1,74 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * WishPool API
+ * WishPool core API contract for mobile apps, parent web, admin web, and backend services. All write endpoints are command-oriented and should be called with an Idempotency-Key header. 
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { PrivacyRequest } from './PrivacyRequest';
+import {
+    PrivacyRequestFromJSON,
+    PrivacyRequestFromJSONTyped,
+    PrivacyRequestToJSON,
+    PrivacyRequestToJSONTyped,
+} from './PrivacyRequest';
+
+/**
+ * 
+ * @export
+ * @interface PrivacyRequestList
+ */
+export interface PrivacyRequestList {
+    /**
+     * 
+     * @type {Array<PrivacyRequest>}
+     * @memberof PrivacyRequestList
+     */
+    requests: Array<PrivacyRequest>;
+}
+
+/**
+ * Check if a given object implements the PrivacyRequestList interface.
+ */
+export function instanceOfPrivacyRequestList(value: object): value is PrivacyRequestList {
+    if (!('requests' in value) || value['requests'] === undefined) return false;
+    return true;
+}
+
+export function PrivacyRequestListFromJSON(json: any): PrivacyRequestList {
+    return PrivacyRequestListFromJSONTyped(json, false);
+}
+
+export function PrivacyRequestListFromJSONTyped(json: any, ignoreDiscriminator: boolean): PrivacyRequestList {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'requests': ((json['requests'] as Array<any>).map(PrivacyRequestFromJSON)),
+    };
+}
+
+export function PrivacyRequestListToJSON(json: any): PrivacyRequestList {
+    return PrivacyRequestListToJSONTyped(json, false);
+}
+
+export function PrivacyRequestListToJSONTyped(value?: PrivacyRequestList | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'requests': ((value['requests'] as Array<any>).map(PrivacyRequestToJSON)),
+    };
+}
+
