# packages/api-contracts/contract-ts/src/models/index.ts
@@ -78,6 +78,7 @@ export * from './PostponeTaskRequest';
 export * from './PrivacyDeletionWorkflowRequest';
 export * from './PrivacyRequest';
 export * from './PrivacyRequestCreate';
+export * from './PrivacyRequestList';
 export * from './Problem';
 export * from './RedeemWishRequest';
 export * from './RefreshRequest';
